--- a/.gitmodules
+++ b/.gitmodules
@@ -109,3 +109,6 @@
 [submodule "j256-ormlite-jdbc-f0aee82e59a12d8f27cd150ee0d5fdf3f2ca91f1"]
 	path = repos/j256/ormlite-jdbc/f0aee82e59a12d8f27cd150ee0d5fdf3f2ca91f1
 	url = https://github.com/j256/ormlite-jdbc.git
+[submodule "jopt-simple-jopt-simple-59a05aa29e08ffaa9b57db138e37010d943a5451"]
+	path = repos/jopt-simple/jopt-simple/59a05aa29e08ffaa9b57db138e37010d943a5451
+	url = https://github.com/jopt-simple/jopt-simple.git
