--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "eclipse-vertx-vert.x-e87daea97a27f7bb698499ca0727077cc1231844"]
 	path = repos/eclipse-vertx/vert.x/e87daea97a27f7bb698499ca0727077cc1231844
 	url = https://github.com/eclipse-vertx/vert.x.git
+[submodule "apache-commons-io-2ae025fe5c4a7d2046c53072b0898e37a079fe62"]
+	path = repos/apache/commons-io/2ae025fe5c4a7d2046c53072b0898e37a079fe62
+	url = https://github.com/apache/commons-io.git
