--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,6 @@
 [submodule "apache-commons-io-2ae025fe5c4a7d2046c53072b0898e37a079fe62"]
 	path = repos/apache/commons-io/2ae025fe5c4a7d2046c53072b0898e37a079fe62
 	url = https://github.com/apache/commons-io.git
+[submodule "apache-commons-configuration-137997974e0ebd3acd047243f46ddf3b90fa0160"]
+	path = repos/apache/commons-configuration/137997974e0ebd3acd047243f46ddf3b90fa0160
+	url = https://github.com/apache/commons-configuration.git
