--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,6 @@
 [submodule "jettison-json-jettison"]
 	path = repos/jettison-json/jettison
 	url = https://github.com/jettison-json/jettison.git
+[submodule "apache-attic-mrunit"]
+	path = repos/apache/attic-mrunit
+	url = https://github.com/apache/attic-mrunit.git
