--- a/.gitmodules
+++ b/.gitmodules
@@ -148,3 +148,6 @@
 [submodule "apache-commons-text"]
 	path = repos/apache/commons-text
 	url = https://github.com/apache/commons-text.git
+[submodule "svn2github-kryo"]
+	path = repos/svn2github/kryo
+	url = https://github.com/svn2github/kryo.git
