--- a/.gitmodules
+++ b/.gitmodules
@@ -187,3 +187,6 @@
 [submodule "apache-commons-pool"]
 	path = repos/apache/commons-pool
 	url = https://github.com/apache/commons-pool.git
+[submodule "str4d-ed25519-java"]
+	path = repos/str4d/ed25519-java
+	url = https://github.com/str4d/ed25519-java.git
